update dist folder

--- a/index.html
+++ b/index.html
@@ -21,13 +21,12 @@
   <meta charset="utf-8">
   <title>Ilies Ait Hamouda</title>
   <base href="/profil/">
-
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Lato:400,400i,700,700i" rel="stylesheet">
   <script defer src="https://use.fontawesome.com/releases/v5.7.2/js/all.js" integrity="sha384-0pzryjIRos8mFBWMzSSZApWtPl/5++eIfzYmTgBBmXYdhvxPc+XcFEk+zJwDgWbP" crossorigin="anonymous"></script>
-</head>
+<link rel="stylesheet" href="styles.c21339ce7fad844a05c6.css"></head>
 <body>
   <app-root></app-root>
-<script type="text/javascript" src="runtime.js"></script><script type="text/javascript" src="polyfills.js"></script><script type="text/javascript" src="styles.js"></script><script type="text/javascript" src="vendor.js"></script><script type="text/javascript" src="main.js"></script></body>
+<script src="runtime.a8ef3a8272419c2e2c66.js" defer></script><script src="polyfills-es5.70a44c9ba640cdacc8d1.js" nomodule defer></script><script src="polyfills.e26264e7f25914f612a7.js" defer></script><script src="main.6245205846f2ddc94fbc.js" defer></script></body>
 </html>
